# ai_mart

./: .env.example  .gitignore  Agents.md  MEMORY_GUIDE.md  README.md  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  structure.txt  vercel.json
backend/: db.py  main.py  pyproject.toml  render.yaml  requirements.txt  start.py  test_script.py  utils.py
backend/config/: settings.py
backend/database/: db.py
backend/models/: models.py
backend/services/: cart_service.py  homepage_service.py  order_service.py  payment_service.py  product_service.py  promo_service.py  sanity_service.py  session_service.py  user_service.py
chatbot/: app.py  pyproject.toml
sanity-studio/: package-lock.json  package.json  sanity.cli.ts  sanity.config.ts
sanity-studio/.sanity/runtime/: app.js
sanity-studio/aimart/: package-lock.json  package.json  sanity.config.ts
sanity-studio/schemaTypes/: category.ts  contentBlock.ts  homepageSection.txt  index.ts  product.ts  user.ts
web-frontend/: .env.local  .gitignore  middleware.ts  next.config.js  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vercel.json
web-frontend/public/: og-fallback.html
web-frontend/src/: middleware.ts
web-frontend/src/app/: globals.css  layout.tsx  page.tsx
web-frontend/src/components/: CategoryCard.tsx  ClerkUI.tsx  ContentBlock.tsx  DOMCleanup.tsx  Footer.tsx  Navbar.tsx  ProductCard.tsx  ProductGrid.tsx
web-frontend/src/context/: CartContext.tsx
web-frontend/src/lib/: api.tsx  fetchProducts.ts  sanity.ts  sanityClient.ts  sanityimage.ts  (+1 more)
(+31 files in other folders)
